frontend/src/components/SearchResultsGridItem.module.css
.container {
  transition: 0.1s;
}

.container:hover {
  transform: scale(1.03);
  cursor: pointer;
}

.item_container:focus,
.item_container:active {
  border: none;
  outline: none;
}

.item_container {
  border-radius: 8px;
}

.season_tag {
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  margin-right: 27px;
}

.course_codes {
  font-weight: 500;
  color: rgb(38, 131, 185);
}

.professors {
  font-weight: 550;
}

.small_text {
  font-weight: 500;
}

.one_line {
  display: block;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.rating {
  font-weight: bold;
}

.worksheet_btn {
  position: absolute;
  top: 4px;
  right: 18px;
}

.conflict_error {
  position: absolute;
  top: -7px;
  right: 0px;
  transform: translate(-40%, 0%);
}

.fb_friends {
  position: absolute;
  top: 0px;
  left: 8px;
  width: 16px;
  height: 16px;
  line-height: 15px;
  text-align: center;
  font-size: 12px;
  font-weight: 500;
}

.icon {
  width: 16px;
  display: block;
}

.prof_icon {
  width: 15px;
  display: block;
}

@media (hover: none) {
  .worksheet_btn {
    top: -10px;
  }

  .worksheet_btn:hover {
    transform: none;
  }

  .container:hover {
    transform: none;
    cursor: none;
  }
}

